# AsyncTask

./: .gitignore  CMakeLists.txt  README.md  build.cmake  common.cmake
core/: CMakeLists.txt  core.cpp  core.hpp
example/: CMakeLists.txt  main.cpp
example/src/: ArgumentProcessor.cpp  ArgumentProcessor.hpp  CommandProcessor.cpp  CommandProcessor.hpp  FileWriterTask.cpp  TimerTask.cpp  TimerTask.hpp  Utils.hpp  main.cpp
example/src/handlers/: AbstractCommandHandler.cpp  AbstractCommandHandler.hpp  CommandResult.hpp  PauseCommandHandler.cpp  PauseCommandHandler.hpp  QuitCommandHandler.cpp  QuitCommandHandler.hpp  ResumeCommandHandler.cpp  ResumeCommandHandler.hpp  StartCommandHandler.cpp  StartCommandHandler.hpp  StatusCommandHandler.cpp  StatusCommandHandler.hpp  StopCommandHandler.cpp  StopCommandHandler.hpp
example/src/tasks/: FileWriterTask.cpp  FileWriterTask.hpp
lib/: CMakeLists.txt
lib/include/: AsyncTaskService.hpp  Task.hpp  TaskHandle.hpp
lib/src/: AsyncTaskHandle.cpp  AsyncTaskHandle.hpp  AsyncTaskService.cpp  Task.cpp
test/: CMakeLists.txt
test/src/: AsyncTaskHandleTest.cpp  AsyncTaskServiceTest.cpp  MockTask.hpp  test.cpp  test.hpp
